--- a/src/components/MarqueeSection.css
+++ b/src/components/MarqueeSection.css
@@ -55,14 +55,53 @@
     will-change: transform;
 }
 
+@media (max-width: 1024px) {
+    .marquee-background {
+        min-height: 50vh;
+    }
+
+    .marquee-text {
+        font-size: var(--text-6xl);
+        padding-right: 80px;
+    }
+
+    .floating-icon-marquee {
+        width: 56px;
+        height: 56px;
+        font-size: 26px;
+    }
+}
+
 @media (max-width: 768px) {
+    .marquee-background {
+        min-height: 40vh;
+    }
+
     .marquee-text {
         font-size: var(--text-5xl);
+        padding-right: 60px;
     }
 
     .floating-icon-marquee {
         width: 50px;
         height: 50px;
         font-size: 24px;
+    }
+}
+
+@media (max-width: 640px) {
+    .marquee-background {
+        min-height: 30vh;
+    }
+
+    .marquee-text {
+        font-size: var(--text-4xl);
+        padding-right: 40px;
+    }
+
+    .floating-icon-marquee {
+        width: 40px;
+        height: 40px;
+        font-size: 20px;
     }
 }
